<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeatherWatch</string>

	<string name="prefs_lastupdate_key">service.lastupdate</string>

    <string name="prefs_default_summary">Not Set</string>
    <string name="prefs_cat_weather_title">Weather</string>
    <string name="prefs_cat_weather_units_title">Weather Units</string>
    <string name="prefs_cat_location_title">Location</string>
    <string name="prefs_apikey_key" translatable="false">weather.owmapikey</string>
    <string name="prefs_apikey_title">API Key</string>
    <string name="prefs_tempunit_key" translatable="false">weather.tempunit</string>
    <string name="prefs_tempunit_title">Temperature Units</string>

    <string-array name="prefs_tempunit_displayValues">
        <item>Kelvin</item>
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    <string-array name="prefs_tempunit_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="prefs_speedunit_key" translatable="false">weather.speedunit</string>
    <string name="prefs_speedunit_title">Speed Units</string>

    <string-array name="prefs_speedunit_displayValues">
        <item>MPH</item>
        <item>KPH</item>
        <item>Knots</item>
        <item>m/s</item>
    </string-array>

    <string-array name="prefs_speedunit_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="prefs_pressureunit_key" translatable="false">weather.pressureunit</string>
    <string name="prefs_pressureunit_title">Pressure Units</string>

    <string-array name="prefs_pressureunit_displayValues">
        <item>in Hg</item>
        <item>mm Hg</item>
        <item>hPa</item>
    </string-array>

    <string-array name="prefs_pressureunit_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="prefs_updatefreq_key" translatable="false">weather.updatefreq</string>
    <string name="prefs_updatefreq_title">Weather Update Period</string>

    <string-array name="prefs_updatefreq_displayValues">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
    </string-array>

    <string-array name="prefs_updatefreq_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string name="prefs_locationsource_key" translatable="false">weather.locationsource</string>
    <string name="prefs_locationsource_title">Location Source</string>

    <string-array name="prefs_locationsource_displayValues">
        <item>Auto</item>
        <item>Network</item>
        <item>GPS</item>
        <item>Manual</item>
    </string-array>

    <string-array name="prefs_locationsource_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>-1</item>
    </string-array>

	<string name="prefs_manuallocation_key" translatable="false">weather.manuallocation</string>
	<string name="prefs_manuallocatoin_title">Custom Location</string>

    <string name="str_degrees_k">%.0f °K</string>
    <string name="str_degrees_c">%.0f °C</string>
    <string name="str_degrees_f">%.0f °F</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_weather">Current Conditions</string>
    <string name="action_hourly_forecast">Hourly Forecast</string>
    <string name="action_daily_forecast">Daily Forecast</string>
    <string name="action_settings">Settings</string>
    <string name="default_na">N/A</string>
    <string name="default_temp">NNN °F</string>
    <string name="loading">Loading…</string>

    <string name="error_check_app">Check app.</string>
    <string name="error_no_api_key">API Key is not set.</string>
    <string name="error_network">Could not connect to OpenWeatherMap.</string>

    <string name="time_now">Now</string>
    <string name="label_wind">Wind</string>
    <string name="label_humidity">Humidity</string>
    <string name="label_pressure">Barometer</string>
    <string name="label_sunrise">Sunrise</string>
    <string name="label_sunset">Sunset</string>

    <string name="field_humidity">%.0f%%</string>

    <string name="str_pressure_inhg">%.2f in/Hg</string>
    <string name="str_pressure_mmhg">%.2f mm/Hg</string>
    <string name="str_pressure_hpa">%.2f hPa</string>

    <string name="str_wind_gust">Gust: %s</string>
    <string name="str_windspeed_mps">%.1f m/s</string>
    <string name="str_windspeed_mph">%.1f MPH</string>
    <string name="str_windspeed_kph">%.1f km/h</string>
    <string name="str_windspeed_knots">%.1f knots</string>

    <string-array name="str_winddirection">
        <item>North</item>
        <item>NNE</item>
        <item>NE</item>
        <item>ENE</item>
        <item>East</item>
        <item>ESE</item>
        <item>SE</item>
        <item>SSE</item>
        <item>South</item>
        <item>SSW</item>
        <item>SW</item>
        <item>WSW</item>
        <item>West</item>
        <item>WNW</item>
        <item>NW</item>
        <item>NNW</item>
    </string-array>

    <string name="daily_forecast_date_format">EEEE, MMM d</string>
	<string name="my_analog_name">My Analog</string>

</resources>
