<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/prefs_cat_weather_title">
        <ListPreference
            android:dialogTitle="@string/prefs_updatefreq_title"
            android:entries="@array/prefs_updatefreq_displayValues"
            android:entryValues="@array/prefs_updatefreq_values"
            android:title="@string/prefs_updatefreq_title"
            android:key="@string/prefs_updatefreq_key"/>
        <EditTextPreference
            android:key="@string/prefs_apikey_key"
            android:title="@string/prefs_apikey_title"
            android:summary="@string/prefs_default_summary"
            android:dialogTitle="@string/prefs_apikey_title"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_cat_weather_units_title">
        <ListPreference
            android:dialogTitle="@string/prefs_tempunit_title"
            android:entries="@array/prefs_tempunit_displayValues"
            android:entryValues="@array/prefs_tempunit_values"
            android:title="@string/prefs_tempunit_title"
            android:key="@string/prefs_tempunit_key"/>
        <ListPreference
            android:dialogTitle="@string/prefs_speedunit_title"
            android:entries="@array/prefs_speedunit_displayValues"
            android:entryValues="@array/prefs_speedunit_values"
            android:title="@string/prefs_speedunit_title"
            android:key="@string/prefs_speedunit_key"/>
        <ListPreference
            android:dialogTitle="@string/prefs_pressureunit_title"
            android:entries="@array/prefs_pressureunit_displayValues"
            android:entryValues="@array/prefs_pressureunit_values"
            android:title="@string/prefs_pressureunit_title"
            android:key="@string/prefs_pressureunit_key"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_cat_location_title">
        <ListPreference
            android:key="@string/prefs_locationsource_key"
            android:title="@string/prefs_locationsource_title"
            android:entries="@array/prefs_locationsource_displayValues"
            android:entryValues="@array/prefs_locationsource_values"
            android:dialogTitle="@string/prefs_locationsource_title"/>
        <EditTextPreference
            android:key="@string/prefs_manuallocation_key"
            android:title="@string/prefs_manuallocatoin_title"
            android:summary="@string/prefs_default_summary"
            android:dialogTitle="@string/prefs_manuallocatoin_title" />
    </PreferenceCategory>
</PreferenceScreen>
