<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.schneenet.android.weatherwatch.WeatherFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.schneenet.android.weatherwatch.views.SquareImageView
            android:id="@+id/weather_title_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_padding"
            android:text="@string/time_now"
            android:id="@+id/weather_time_display"
            android:textSize="@dimen/abc_text_size_headline_material"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.schneenet.android.weatherwatch.views.SquareImageView
            android:id="@+id/weather_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:scaleType="fitXY"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/weather_conditions"
                android:text="@string/default_na"
                android:textSize="@dimen/abc_text_size_title_material"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_na"
                android:id="@+id/weather_temperature"
                android:textSize="@dimen/weather_temperature_textSize"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/weather_city"
                android:text="@string/default_na"/>

        </LinearLayout>
    </LinearLayout>

    <TableLayout
        android:id="@+id/details_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/card_padding"
                android:text="@string/label_wind"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/card_padding"
                android:id="@+id/field_wind"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/card_padding"
                android:text="@string/label_sunrise"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/card_padding"
                android:id="@+id/field_sunrise"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/card_padding"
                android:text="@string/label_sunset"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/card_padding"
                android:id="@+id/field_sunset"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/card_padding"
                android:text="@string/label_humidity"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/card_padding"
                android:id="@+id/field_humidity"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:textStyle="bold"
                android:layout_margin="@dimen/card_padding"
                android:text="@string/label_pressure"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_margin="@dimen/card_padding"
                android:id="@+id/field_pressure"/>
        </TableRow>

    </TableLayout>

</LinearLayout>